objects/Opportunity_Solution__c.object
<CustomObject>
    <description>Link for solutions to opportunities</description>
    <fields>
        <fullName>Opportunity_Account__c</fullName>
        <formula>Opportunity_Id__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Solutions</relationshipLabel>
        <relationshipName>Opportunity_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Id</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Solution Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Title__c</fullName>
        <formula>Solution_Id__r.SolutionName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Title</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Solution</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Opportunity Solution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>